apps/media/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
        - name: overseerr
          # renovate: datasource=docker depName=linuxserver/overseerr versioning=docker
          image: linuxserver/overseerr:1.35.0
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: overseerr-config
